# rental_application

./: .gitignore  README.md  conftest.py  create_sample_template.py  diagnose.py  fields.csv  fill_rental_pdf.py  pyproject.toml  requirements.txt  sample_applicants.csv  test_imports.py
examples/: 1_extract_fields.py  2_fill_pdf_from_csv.py  basic_fill.py  diagnose_pdf.py
src/rental_application/: __init__.py  config.py  field_mapper.py  filler.py  llm_client.py  models.py  ocr.py  pdf_handler.py
src/rental_application/utils/: cache.py  prompts.py
tests/: __init__.py  test_field_mapper.py  test_llm_client.py  test_models.py
tests/fixtures/: __init__.py
