[tool.poetry]
name = "rental-application"
version = "0.1.0"
description = "Script to Fill out PDFs for rental applications in Switzerland"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "rental_application", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.10"
pypdf = "^4.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
requests = "^2.31"
litellm = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
ruff = "^0.1"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"
